Migrate tests to JUnit5 (#365)